[package]
name = "sec_edgar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["gzip", "deflate", "json"] }
tokio = { version = "1.28.2", default-features = false, features = ["net", "macros", "rt-multi-thread"] }
