[package]
name = "sec_edgar"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This crate provides tools to query the SEC's EDGAR API."
homepage = "https://github.com/tieje/rs_sec_edgar"
documentation = "https://docs.rs/sec_edgar/0.1.0/sec_edgar/"
repository = "https://github.com/tieje/rs_sec_edgar"
readme = "README.md"
exclude = [
    ".cargo/",
    ".vscode/",
    ".ignore/",
    "TODO.md"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.11", features = ["with-serde"] }
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["gzip", "deflate", "json"] }
serde = "1.0.164"
serde-xml-rs = "0.6.0"
tokio = { version = "1.28.2", default-features = false, features = ["net", "macros", "rt-multi-thread"] }
url = "2.4.0"
